# immuni-backend-analytics

./: .dockerignore  .gitmodules  AUTHORS  CONTRIBUTING.md  README.md  entrypoint.sh  pyproject.toml  pytest.ini
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
docker/: docker-compose.yml
immuni_analytics/: celery.py  sanic.py
immuni_analytics/apis/: analytics.py
immuni_analytics/core/: config.py  managers.py
immuni_analytics/helpers/: __init__.py  api.py  date_utils.py  device_check.py  dummy.py  his_external_service.py  redis.py  request.py  safety_net.py
immuni_analytics/models/: analytics_document.py  data_retention_document.py  device_check.py  enums.py  exposure_data.py  marshmallow.py  operational_info.py  retention_policy_compliant_document.py  swagger.py
immuni_analytics/monitoring/: api.py  celery.py  helpers.py
immuni_analytics/tasks/: __init__.py  authorize_analytics_token.py  authorize_safety_net_attestation.py  delete_old_data.py  route.py  store_ingested_data.py  store_operational_info.py  verify_safety_net_attestation.py
tests/: conftest.py  test_managers.py
tests/apis/: __init__.py  test_analytics.py  test_apple_operational_info.py  test_apple_token.py  test_google_operational_info.py
tests/fixtures/: core.py  exposure_data.py  his_external_service.py  operational_info.py  safety_net.py
tests/helpers/: test_date_utils.py  test_device_check.py  test_his_external_service.py  test_inject_operational_info.py  test_monitoring.py  test_redis.py  test_request.py  test_safety_net.py
tests/models/: test_device_check.py  test_exposure_data.py
tests/tasks/: test_authorize_analytics_token.py  test_delete_old_data.py  test_store_ingested_data.py  test_store_operational_info.py  test_verify_safety_net_attestation.py
tests/test_helpers/: test_date_utils.py  test_redis.py  test_safety_net.py
(+18 files in other folders)
